@@ -1,4 +1,4 @@
- /* config.h for dminiwm.c [ 0.3.0 ]
+ /* config.h for dminiwm.c [ 0.3.2 ]
  *
  *  Started from catwm 31/12/10
  *
